sorted/tests/02-not-enum.stderr
error: expected enum or match expression
  --> $DIR/02-not-enum.rs:31:1
   |
31 | #[sorted]
   | ^^^^^^^^^
